--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ greenlet==3.0.3
 idna==3.7
 playwright==1.44.0
 pyee==11.1.0
+python-dotenv==1.0.1
 requests==2.32.3
 sqlparse==0.5.0
 typing_extensions==4.12.2
